8-k8s-ingress-loadbalancer-multiple-subdomains/kubernetes/gateway.yml
# Gateway topologies examples at: https://istio.io/latest/docs/setup/additional-setup/gateway/#gateway-deployment-topologies
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  # namespace: production
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - app.testmosaic.com
        - test.testmosaic.com
    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS
    #   hosts:
    #     - app.testmosaic.com
    #   tls:
    #     credentialName: api-devopsbyexample-com-crt
    #     mode: SIMPLE
